# repository-pattern-fastapi

./: .env.sample  .gitignore  Makefile  NOTES.md  README.md  logging-config.yaml  mkdocs.yml  pyproject.toml  requirements-dev.txt  requirements.lock.txt  requirements.txt
app/: main.py
app/core/: config.py  db.py  dependencies.py  domain_event.py  event_bus.py  exception_handlers.py  global_event_logger.py  integration_event.py  logging.py  sqlalchemy_uow.py  uow.py
app/users/: exceptions.py  models.py  repository.py  router.py  schemas.py  service.py
app/users/events/: domain.py  integration.py
docs/: api.md  index.md  setup.md
migrations/: env.py
migrations/versions/: de55ce2885fb_add_user_table.py
